--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ title: Hack on GitHub Pages
 description: >
   This site will get you started hacking with GitHub Pages.
 baseurl: "/tamuhack" # the subpath of your site
-url: "https://steveortiz.github.io"
-email: steve@ortizaggies.com
-github_username:  steveortiz
+url: "https://finbar2.github.io"
+email: 
+github_username:  finbar2
 linkedin_username: trustycoder
 twitter_username: trustycoder
 
