--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Hack on GitHub Pages
 description: >
   This site will get you started hacking with GitHub Pages.
 baseurl: "/tamuhack" # the subpath of your site
-url: "https://finbar2.github.io"
+url: "https://finbar2.github.io/"
 email: 
 github_username:  finbar2
 linkedin_username: trustycoder
