--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,12 @@
 # in the templates via {{ site.myvariable }}.
 title: Hack on GitHub Pages
 description: >
-  This site will get you started hacking with GitHub Pages.
+  This site is a mod on the TAMU Hack GitHub Page.
 baseurl: "/tamuhack" # the subpath of your site
 url: "https://finbar2.github.io/"
 email: 
 github_username:  finbar2
-linkedin_username: trustycoder
-twitter_username: trustycoder
+
 
 # Build settings
 markdown: kramdown
