--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Hack on GitHub Pages
+title: Finbar on Github Pages
 description: >
   This site is a mod on the TAMU Hack GitHub Page.
 baseurl: "/tamuhack" # the subpath of your site
